--- a/LCDF/数逻笔记.md
+++ b/LCDF/数逻笔记.md
@@ -294,7 +294,7 @@ reg [7:0] C;
 | 复位           | 0    | 0    | 0    | 1    |
 | 未定义（同时） | 1    | 1    | x    | x    |
 
-#### $\overline{S}\overline{R}$锁存器（NAND）
+#### SnRn锁存器（NAND）
 
 | 状态           | Sn   | Rn   | Q    | Qn   |
 | -------------- | ---- | ---- | ---- | ---- |
@@ -304,21 +304,6 @@ reg [7:0] C;
 | 复位           | 1    | 0    | 0    | 1    |
 | 复位           | 1    | 1    | 0    | 1    |
 | 未定义（同时） | 0    | 0    | x    | x    |
-
-#### SR触发器（Clocked SR Latch）
-
-**两种实现方式**
-
-- 2 × NAND2 + NAND_Latch
-- 2 × AND2 + NOR_Latch
-
-| 状态   | C    | S    | R    |
-| ------ | ---- | ---- | ---- |
-| 不变   | 0    | x    | x    |
-| 不变   | 1    | 0    | 0    |
-| 复位   | 1    | 0    | 1    |
-| 置位   | 1    | 1    | 0    |
-| 未定义 | 1    | 1    | 1    |
 
 #### D锁存器
 
@@ -338,7 +323,22 @@ D指的是Data
 
 ### 进阶
 
-#### 触发器
+#### SR触发器（Clocked SR Latch）
+
+**两种实现方式**
+
+- 2 × NAND2 + NAND_Latch
+- 2 × AND2 + NOR_Latch
+
+| 状态   | C    | S    | R    |
+| ------ | ---- | ---- | ---- |
+| 不变   | 0    | x    | x    |
+| 不变   | 1    | 0    | 0    |
+| 复位   | 1    | 0    | 1    |
+| 置位   | 1    | 1    | 0    |
+| 未定义 | 1    | 1    | 1    |
+
+#### D触发器
 
 * **正边(上升)沿D触发器**
   * DLatch + SRLatch + 2 × NOR
@@ -346,6 +346,8 @@ D指的是Data
 * **负边(下降)沿D触发器**
   * DLatch + SRLatch + 1 × NOR
   * symbol：C处有尖角，外侧有小圆
+
+### 时序电路设计
 
 #### Moore & Mealy
 
@@ -439,7 +441,7 @@ $D_A = B  \\  D_B = \overline{(A \oplus X)} = A \odot X  \\  Y = (A \oplus X) \o
 | 1    | 1    | 0    | 0      | 1      | 0    |
 | 1    | 1    | 1    | 1      | 1      | 1    |
 
-#### **State Diagram**:
+#### State Diagram
 
 Label form:
 
@@ -449,8 +451,6 @@ Label form:
 * On directed arc with the output included:
   * input/output
   * Mealy type output depends on state and input
-
-### 时序电路设计
 
 **Diagram -> Table -> Equations**
 
@@ -473,7 +473,7 @@ Label form:
    graph LR
    A --1/0--> B
    B --1/0--> C
-C --0/0--> D
+   C --0/0--> D
    D --1/1--> B
    D --0/0--> A
    B --0/0--> A
@@ -522,7 +522,7 @@ C --0/0--> D
 
 * 直接按顺序
 * 用格雷码(较常用)
-  * 优点：与K-Map适配
+  * 优点：与K-Map适配，便于化简
 * 特殊的
   * 单热点(one-hot)赋值（独热码）
     * 类似于译码器输出
@@ -531,7 +531,7 @@ C --0/0--> D
 
 **选择原则**
 
-* 安全（课程中不重要）
+* 安全（本课程中不重要）
 * 相邻项越多越好，这样消掉的多，电路可简化
 
 **Unused State的处理**
@@ -562,3 +562,67 @@ C --0/0--> D
 * **t~s~与t~h~**
   * 建立(Setup)时间(t~s~)：时钟沿到来前输入数据D必须要稳定的时间
   * 保持(Hold)时间(t~h~)：时钟沿到来后输入数据D必须要稳定的时间
+
+### 其他触发器
+
+JK触发器
+
+* 同SR，但在J=K=1时会到相反电平
+
+T触发器
+
+* T=1时到相反电平
+
+## Ch6
+
+### 基本定义与概念
+
+* 数据通路
+  * 包括数据处理逻辑和一组用与执行数据处理的寄存器
+* 控制单元
+  * 由一些逻辑单元组成
+  * 决定数据通路处理数据过程中各种操作的**顺序**
+* 微操作
+  * 即寄存器传输记号
+  * 描述了基本数据处理行为
+* 寄存器传输
+  * 在寄存器之间、寄存器与存储器之间、以及通过数据处理逻辑传输信息
+  * 由专门的传输硬件（如多路复用器）和总线一起实现
+
+### 寄存器与加载使能
+
+**并行加载寄存器**
+
+避免时钟偏移(clock skew)
+
+### 寄存器传输
+
+数据通路与控制单元的交互
+
+```mermaid
+graph LR
+
+控制单元{控制单元} --控制信号--> 数据通路{数据通路}
+数据通路 --状态信号--> 控制单元
+控制输入 --> 控制单元
+数据通路 --> 数据输出
+控制单元 --> 控制输出
+数据输入 --> 数据通路
+```
+
+数字系统的寄存器传输系统可以由一下三个方面进行描述：
+
+1. 系统中的寄存器组
+2. 对寄存器中存储数据执行的操作
+3. 系统中操作执行顺序的控制
+
+**基本操作**
+
+* 一个寄存器可以完成多个基本操作，比如加载、计数、加减法、移位
+
+**微操作(microoperation)**
+
+* 对存储器存储结构执行的基本操作成为微操作，比如装载一个寄存器的内容至另一个寄存器，将两个寄存器内容相加，将一个寄存器内容加1
+
+\* RTL(Reg Trans Level/Language)
+
