--- a/GP/普物2笔记.md
+++ b/GP/普物2笔记.md
@@ -48,19 +48,17 @@
   * $m_0 = - {\frac{f_0}{f_e}}$，符号表示倒像
 * **照相机**
 
-### Ch36 Wave Optics
+### Ch36 Wave Optics-1 Interference 干涉
 
-#### Interference 干涉
-
-##### 干涉条件
+#### 干涉条件
 
 1. 同频率
 2. 振动方向相同(对于横波是y轴)
 3. 相位差恒定
 
-##### 介质中光性质的变化
+#### 介质中光性质的变化
 
-$\displaystyle\begin{cases} \lambda_n = \frac \lambda n \\ \varphi = \frac{2\pi r}{\lambda_n} = \frac{2\pi nr}{\lambda}，更多用于相位差 \\ L = nr \end{cases}$
+${\displaystyle\begin{cases} \lambda_n = \frac \lambda n \\ \varphi = \frac{2\pi r}{\lambda_n} = \frac{2\pi nr}{\lambda}，更多用于相位差 \\ L = nr \end{cases}}$
 
 **干涉**
 
@@ -68,7 +66,7 @@ $\displaystyle\begin{cases} \lambda_n = \frac \lambda n \\ \varphi = \frac{2\pi 
 * 减弱：$\delta = \pm (2k-1) \frac \lambda 2$
 * 综合：$\delta = \left \{ \begin{array}{cc} k\lambda,(k = 1,2,3,...) & \Longrightarrow 明纹 \\ (2k-1)\frac\lambda2,(k=1,2,3,...) & \Longrightarrow 暗纹 \end{array}\right.$
 
-##### 双缝干涉(分波阵面法)
+#### 双缝干涉(分波阵面法)
 
 * **极大**
   * $\delta = d\sin\theta = \pm k \lambda$
@@ -113,7 +111,7 @@ $I = 4I_0\cos(\frac{\Delta\varphi}{2})$
 >
 >  ​	Proof: $\Delta\varphi = 2\pi(\frac{n_1r_1}{\lambda} - \frac{n_2r_2}{\lambda}) = \frac{2\pi}\lambda \Delta L$
 >
->  另外，透镜会改变光线的传播方向，但并不会引起附加的光程差
+>  另外，==透镜会改变光线的传播方向，但并不会引起附加的光程差==
 
 ##### 等倾(倾角i相同同种纹)干涉
 
@@ -141,7 +139,7 @@ $2e\sqrt{n_2^2 - n_1^2 \sin^2i} = \left \{ \begin{array}{cc} k\lambda,(k = 1,2,3
 
 $\delta = 2ne + \frac\lambda2 = \left \{ \begin{array}{cc} k\lambda,(k = 1,2,3,...) & \Longrightarrow 明纹 \\ (2k-1)\frac\lambda2,(k=1,2,3,...) & \Longrightarrow 暗纹 \end{array}\right.$，此处n是空气层的折射率？
 
-因此相邻两个干涉条纹(同种)的厚度差$\Delta e = \frac{\lambda}{2n} = \Delta L \sin \theta$，因此有$\Delta L = \frac{\lambda}{2n\sin \theta}$
+因此相邻两个干涉条纹(同种)的厚度差$\Delta e = \frac{\lambda}{2n} = \Delta L \sin \theta$，因此有$\Delta L = {\frac{\lambda}{2n\sin \theta}}$
 
 ##### 牛顿环
 
@@ -153,13 +151,23 @@ $r = \left \{ \begin{array}{cc} \sqrt{(k-\frac12)R\lambda},(k = 1,2,3,...) & \Lo
 
 ##### 迈克尔孙干涉
 
+### Ch36-2 衍射
 
+**两类衍射**
 
+* 菲涅尔衍射
+  * 光源距离有限远
+* 夫琅禾费(Fraunhofer)衍射
+  * 光源距离无限远
+  * 入射光是平行光
 
+**惠更斯菲涅耳原理**
 
+以电场表示光强：$dE_P = C \frac{dS}{r}K(\theta) \cos (\omega t - \frac{2\pi}{\lambda}r + \varphi_0)$，其中C为比例常数，φ~0~为新波源的初相位，K(θ)随θ增大而减小，称为倾斜因子。
 
+#### 单缝夫琅禾费衍射的菲涅耳半波带法
 
+**引理**
 
-
-
-
+* 若asinθ恰好为半波长偶数倍，则恰好全部抵消，是暗纹；若恰好为半波长奇数倍，则恰好留下一个半波带未被抵消；且θ越小，半波带总数越小，留下的未抵消的半波带就越强
+* 
