--- a/LCDF/数逻笔记.md
+++ b/LCDF/数逻笔记.md
@@ -23,7 +23,7 @@ $$
 AB+\overline AC+BC=AB+\overline AC
 $$
 
-####Duality Rules
+#### Duality Rules
 
 将F中
 
@@ -573,6 +573,17 @@ T触发器
 
 * T=1时到相反电平
 
+### 触发器描述
+
+* D
+  * Q(t+1) = D
+* T
+  * Q(t+1) = T ^ Q
+* SR
+  * Q(t+1) = S + Rn \* Q (S \* R = 0)
+* JK
+  * Q(t+1) = J \* Qn + Kn \* Q
+
 ## Ch6
 
 ### 基本定义与概念
@@ -587,7 +598,7 @@ T触发器
   * 描述了基本数据处理行为
 * 寄存器传输
   * 在寄存器之间、寄存器与存储器之间、以及通过数据处理逻辑传输信息
-  * 由专门的传输硬件（如多路复用器）和总线一起实现
+  * 由专门的传输硬件（如多路复用器，Selectively use a load control to change the register contents.）和总线一起实现
 
 ### 寄存器与加载使能
 
@@ -625,4 +636,11 @@ graph LR
 * 对存储器存储结构执行的基本操作成为微操作，比如装载一个寄存器的内容至另一个寄存器，将两个寄存器内容相加，将一个寄存器内容加1
 
 \* RTL(Reg Trans Level/Language)
+
+| Arithmetic operations | Logical operations (BITWISE)    | Shift operations          |
+| --------------------- | ------------------------------- | ------------------------- |
+| + Addition            | $R_0 \leftarrow R_1 \vee R_2$    | $R_0 \leftarrow$ sr $R_0$ |
+| – Subtraction: $R_0 \leftarrow R_1 + \overline{R_2} + 1$ | $R_0 \leftarrow R_1 \wedge R_2$   | $R_0 \leftarrow$ sl $R_1$ |
+| * Multiplication      | $R_0 \leftarrow R_1 \oplus R_2$ |                           |
+| / Division            | $R_0 \leftarrow \overline R_1$  |                           |
 
