--- a/GP/普物2笔记.md
+++ b/GP/普物2笔记.md
@@ -167,7 +167,47 @@ $r = \left \{ \begin{array}{cc} \sqrt{(k-\frac12)R\lambda},(k = 1,2,3,...) & \Lo
 
 #### 单缝夫琅禾费衍射的菲涅耳半波带法
 
-**引理**
+**用于确定纹的空间分布**
 
 * 若asinθ恰好为半波长偶数倍，则恰好全部抵消，是暗纹；若恰好为半波长奇数倍，则恰好留下一个半波带未被抵消；且θ越小，半波带总数越小，留下的未抵消的半波带就越强
-* 
+* 由式$\delta =a\sin\theta$，当狭缝越窄时，各级衍射角均增大，衍射现象更为明显
+
+$\Longrightarrow \left \{ \begin{array}{lll} \theta = 0 &  & 中央明纹中心 \\ a\sin\theta = \pm 2k\frac{\lambda}{2} & k = 1,2,3,... & 暗纹中心 \\ a\sin\theta = \pm(2k+1)\frac{\lambda}{2} & k = 1,2,3,... & 明纹中心  \end{array} \right.$
+
+#### 单缝夫琅禾费的光强分布
+
+**引理**
+
+* 同一级的光分为m束，因为其到达P的距离近似相等，因此视作振幅$|\vec{A_i}|$近似相等，但相位不同；又有因为各面元宽度相等 $\Longrightarrow$ 相邻面元到P光程差相同 $\Longrightarrow$ 相邻两束光的相位差相同
+
+**开始光强证明部分**
+
+1. 设相邻两束光的相位差为$\Delta\varphi$，某束光振幅为极坐标系上的矢量${\vec{A_i}}$
+2. 弧长：$=R(m\Delta\varphi) \approx nA_1$
+3. 合振幅：$A_\theta = |\sum \vec{A_i}| = 2R\sin(\frac{n\Delta\varphi}{2}) = 2\frac{A_1}{\Delta\varphi}\sin(\frac{n\Delta\varphi}{2})$
+4. 总光程差：$(\Delta\varphi)_总 = n\Delta\varphi = 2\pi{\frac{a\sin\theta}{\lambda}}$
+5. 回到3：$A_\theta = \frac{nA_1}{\pi{\frac{a\sin\theta}{\lambda}}} \cdot \sin(\pi{\frac{a\sin\theta}{\lambda}}) = nA_1\frac{\sin\alpha}{\alpha}, \alpha = \pi{\frac{a\sin\theta}{\lambda}}$
+6. 若考虑中央(零级)明纹，则有$\displaystyle\lim_{\alpha\rightarrow0} \frac{\sin\alpha}{\alpha} = 1$，因此$A_{\theta=0} = nA_i$，其中$A_i$为其某束光的振幅
+7. 故有：$A_\theta = A_0{\frac{\sin\alpha}{\alpha}}(\alpha = \pi{\frac{a\sin\theta}{\lambda}})$
+8. 并且：$\frac{I}{I_0} = \frac{A_\theta^2}{A_0^2} = \frac{\sin^2\alpha}{\alpha^2}{}$
+
+##### 光强分布曲线
+
+* 暗纹位置：满足$\sin\alpha=0 \ \&\ \alpha \neq 0 \Longrightarrow \pi{\frac{a\sin\theta}{\lambda}} = \pm k\pi(k\in \N^+)$
+* 明纹位置：满足$\frac{d}{d\alpha}(\frac{\sin^2\alpha}{\alpha^2}) = 0$
+
+$\Longrightarrow \left \{ \begin{array}{lll} \theta = 0  & 中央明纹中心 & \\ \sin\theta = \pm k\frac{\lambda}{a} (k\in \N^+) & 暗纹中心 & 与半波法同解 \\ \tan\alpha = \alpha & 明纹中心 & 不在两暗纹中点 \end{array} \right.$
+
+**求得的结论**
+
+1. $u_1 = \pm 1.43\pi$ ; $\sin\theta_1=\pm 1.43\frac{\lambda}{a}$ ; $\frac{I_1}{I_0} = 4.7\%$
+2. $u_2 = \pm 2.46\pi$ ; $\sin\theta_1=\pm 2.46\frac{\lambda}{a}$ ; $\frac{I_1}{I_0} = 1.7\%$
+3. $u_3 = \pm 3.47\pi$ ; $\sin\theta_1=\pm 3.47\frac{\lambda}{a}$ ; $\frac{I_1}{I_0} = 0.7\%$
+
+#### 光栅衍射
+
+#### 圆孔衍射
+
+##### 艾里斑
+
+$\Delta x = f \Delta \theta = f(1.22\frac{\lambda}{d})$
