--- a/生命科学理论课笔记.md
+++ b/生命科学理论课笔记.md
@@ -214,3 +214,65 @@ $捕捞 \xrightarrow{减少} 龙虾 \xrightarrow{增加} 球海胆 \xrightarrow{
 
 $非洲象 \xrightarrow{取食树上嫩叶} 灌木难以存活 \xrightarrow{形成} 草原 \xrightarrow{使得} 草原有蹄动物得以生存$
 
+# Dec9
+
+## 关系
+
+植物的信息通讯
+
+* 化学
+* 颜色
+
+动物的信息通讯
+
+* 颜色：孔雀
+  * 不同的感知方法(波段)看到的并不一样
+* 声音
+  * 鸟类为最：吸引prey、异性
+  * 昆虫靠振翅频率
+  * <u>最重要的功能是吸引异性</u>
+* 化学
+  * 老鼠(触须)、蚂蚁、狗
+* 触觉
+  * 海洋部分生物生物、蜘蛛、灵长类
+* 舞蹈信号
+* 电信号
+
+动物的利他行为
+
+## 生物分布
+
+* 大气圈
+* 水圈
+* 生物圈
+
+Bergman定律：恒温动物的大型种类取向与生活与寒冷地区
+* 比表面积
+
+Allen规律：四肢、尾巴和外耳在低温下变小变短。增加毛或羽毛数量
+
+季相：植物在一年四季表现的不同
+
+**陆地生物群落的主要类型**
+
+* 热带雨林
+* 常绿阔叶林
+  * 群落结构较复杂、层次分明
+  * 藤本植物较丰富
+* 落叶阔叶林
+* 北方针叶林(Boreal coniferous forest)：云杉冷杉松
+  * 林冠不茂密：利于苔藓地衣生存
+* 热带稀树干草原
+  * 热带干燥地区
+  * 稀疏散步耐寒、矮生乔木的植物群落
+* 温带草原
+* 荒漠
+  * 动物在冬天夏天休眠
+  * 储存大量食物过冬
+  * 夜出比例高
+* 冻原
+  * 分布在北半球高纬度地区
+  * 优势植物是多年生灌木、苔原、禾草、苔藓和地衣
+
+**海洋生物的分布格局**
+
