--- a/EngSS/19-12-2.md
+++ b/EngSS/19-12-2.md
@@ -55,7 +55,7 @@ Try to lead and control the direction and going of the conversation
 
 
 讲得生动的原因
-$\begin{cases} 细节丰富 \\ 副词等修饰词很多 \\ 元音开头的词的使用 \\ 重读第一个音节的多音节单词 \end{cases}$
+${\begin{cases} 细节丰富 \\ 副词等修饰词很多 \\ 元音开头的词的使用 \\ 重读第一个音节的多音节单词 \end{cases}}$
 
 
 
