--- a/Assembly/19-11-27.md
+++ b/Assembly/19-11-27.md
@@ -8,7 +8,7 @@
 
 ### 32位
 
-edx右边16位还是dx，dh，dl，左边16位没有名字
+<u>edx右边16位还是dx，dh，dl，左边16位没有名字</u>
 
 
 
@@ -26,6 +26,13 @@ xchg ax,ds[bx]
 
 
 ### mul
+
+`mul reg或内存单元`
+
+| 位数         | 存在固定reg的常数 | 另一个随意存的常数 | 积    |
+| ------------ | ----------------- | ------------------ | ----- |
+| 8 * 8 = 16   | AL                | 8位reg或内存单元   | AX    |
+| 16 * 16 = 32 | AX                | 16位reg或内存单元  | DX:AX |
 
 dec2v32.asm
 
@@ -106,6 +113,13 @@ imul ax, bx, 3; ax = bx * 3
 
 
 ### div
+
+`div 除数`
+
+| 位数                         | 除数              | 被除数 | 结果(L...H) |
+| ---------------------------- | ----------------- | ------ | ----------- |
+| 8 div 16(16/8) = 8 ... 8     | 8位reg或内存单元  | AX     | AL...AH     |
+| 16 div 32(32/16) = 16 ... 16 | 16位reg或内存单元 | DX:AX  | AX...DX     |
 
 ax / 除数 = al ... ah
 
