--- a/Assembly/_汇编总结.md
+++ b/Assembly/_汇编总结.md
@@ -105,7 +105,9 @@ ah = 2h：输出DL中单个字符
 
 ---
 
-==push不能八位==
+==push、pop至少16位==
+
+==8086只能十六位，就算加dword ptr也不行==
 
 ---
 
@@ -120,6 +122,32 @@ video_addr dw 0000h, 0B800h, 160, 0B800h
 ;上述定义也可以写成:
 ;video_addr dd 0B8000000h, 0B80000A0h
 ```
+
+---
+
+`mul reg或内存单元`
+
+| 位数         | 存在固定reg的常数 | 另一个随意存的常数 | 积    |
+| ------------ | ----------------- | ------------------ | ----- |
+| 8 * 8 = 16   | AL                | 8位reg或内存单元   | AX    |
+| 16 * 16 = 32 | AX                | 16位reg或内存单元  | DX:AX |
+
+`div 除数`
+
+| 位数                         | 除数              | 被除数 | 结果(L...H) |
+| ---------------------------- | ----------------- | ------ | ----------- |
+| 8 div 16(16/8) = 8 ... 8     | 8位reg或内存单元  | AX     | AL...AH     |
+| 16 div 32(32/16) = 16 ... 16 | 16位reg或内存单元 | DX:AX  | AX...DX     |
+
+`imul`
+
+---
+
+<u>inc不影响CF位, add指令会影响CF:</u>
+
+---
+
+<u>无论是哪种移位，出去的那位都在CF</u>
 
 ---
 
