--- a/EngSS/19-12-9.md
+++ b/EngSS/19-12-9.md
@@ -35,3 +35,32 @@ MrsS抱怨没鸟了：作者的嘲讽，鸟是自己打没的
 chance acquaintances 萍水相逢的人
 
 "Here they are at last" 与 "My anut will be down presently" 异曲同工
+
+exclaim 惊呼
+
+像鬼
+
+* ~~3 people~~ 3 firgure
+* no noise
+
+### 为什么吧故事设在dusk
+
+黄昏 很 ambigious，介于白天和晚上
+
+halldoor gravel drive frontgate 是他逃跑路上经过的三个东西
+
+bolt out
+
+"a Mr.Nuttel" a用来描述陌生人
+
+romance 故事
+
+short notice = within the shortest possible time
+
+“她的专长是在最短的时间内编造故事”
+
+"I expect it was the spaniel" 重读在 I
+
+fabrication
+
+Ganges 恒河
