--- a/GP/普物2笔记.md
+++ b/GP/普物2笔记.md
@@ -204,10 +204,24 @@ $\Longrightarrow \left \{ \begin{array}{lll} \theta = 0  & 中央明纹中心 & 
 2. $u_2 = \pm 2.46\pi$ ; $\sin\theta_1=\pm 2.46\frac{\lambda}{a}$ ; $\frac{I_1}{I_0} = 1.7\%$
 3. $u_3 = \pm 3.47\pi$ ; $\sin\theta_1=\pm 3.47\frac{\lambda}{a}$ ; $\frac{I_1}{I_0} = 0.7\%$
 
-#### 光栅衍射
-
 #### 圆孔衍射
 
 ##### 艾里斑
 
-$\Delta x = f \Delta \theta = f(1.22\frac{\lambda}{d})$
+艾里斑是点光源通过理想透镜成像时，由于衍射而在焦点处形成的光斑。中央是明亮的圆斑，周围有一组较弱的明暗相间的同心环状条纹，把<u>其中以第一暗环为界限的中央亮斑称作艾里斑</u>。这个光斑的大小可以用下面的公式来估计：
+
+$\theta \approx \sin \theta = 1.22\frac{\lambda}{D}{}$，其中D(2R)为孔的直径
+
+越有84%的光能量聚集在艾里斑
+
+##### 瑞利判据(Rayleigh's Criterion)
+
+判据规定，当一个艾里斑的边缘落到另一个艾里斑的中心时，是这两个物体刚能分辨的极限。
+
+最小分辨角(等于艾里斑的角半径)：$\theta_{min} = \theta_0 = 1.22\frac{\lambda}{2R}{}$，其中D(2R)为孔的直径
+
+单镜望远镜最小能观察到的物件的直径：$\Delta x = f \Delta \theta = 1.22\frac{f\lambda}{2R}{}$，其中f为焦距
+
+定义**分辨率**：$R = \frac{1}{\theta_{min}} = \frac{D}{1.22\lambda}{}$
+
+#### 光栅衍射
