--- a/LCDF/数逻笔记.md
+++ b/LCDF/数逻笔记.md
@@ -249,6 +249,8 @@ Maxterm：找0取反
 > In most cases, this results in a simplified, although not necessarily optimum, sum-of-products expression.
 >
 > **WHY??**
+> 
+> I know why now
 
 ##### K-MAP化简为OR-AND形式
 
@@ -627,11 +629,11 @@ graph LR
 2. 对寄存器中存储数据执行的操作
 3. 系统中操作执行顺序的控制
 
+### 微操作(microoperation)
+
 **基本操作**
 
 * 一个寄存器可以完成多个基本操作，比如加载、计数、加减法、移位
-
-**微操作(microoperation)**
 
 * 对存储器存储结构执行的基本操作成为微操作，比如装载一个寄存器的内容至另一个寄存器，将两个寄存器内容相加，将一个寄存器内容加1
 
@@ -644,3 +646,25 @@ graph LR
 | * Multiplication      | $R_0 \leftarrow R_1 \oplus R_2$ |                           |
 | / Division            | $R_0 \leftarrow \overline R_1$  |                           |
 
+### 对单个寄存器的微操作
+
+**基于多路复用器的传输**
+
+`if(K1 == 1) then (R0 <-- R1) else if (K2 == 1) then (R0 <-- R2)`可分解为：$K_1:R0\leftarrow R1;\ \overline{K_1}K_2: R0 \leftarrow R2$
+
+**移位寄存器**
+
+(见实验12
+
+* 可并行加载
+* 可双向移位
+* 可改变移位值
+
+**行波计数器(Ripple Counter)**
+
+* 实现
+  * 每当Q~i~从1到0跳转，Q~n(i)~从0到1跳转，引起Q~(i+1)~从0到1的翻转
+* 缺点
+  * 异步电路，时延大，不稳定
+
+**同步计数器(Synchronous Counters)**
