--- a/概统笔记.md
+++ b/概统笔记.md
@@ -784,7 +784,7 @@ $a = \frac{1}{2\sigma^2},  b = \frac{1}{6\sigma^2}, k = 2$
 
 1. $\displaystyle \frac{S_1^2/\sigma_1^2}{S_2^2/\sigma_2^2} \sim \it F (n_1-1,n_2-1)$
 2. $\displaystyle \frac{(\overline{X}-\overline{Y})-(\mu_1-\mu_2)}{\sqrt{\frac{\sigma_1^2}{n_1}+\frac{\sigma_2^2}{n_2}}} \sim N(0,1)$
-3. 当$\displaystyle \sigma_1^2 = \sigma_2^2 \triangleq \sigma^2$，有$\displaystyle \frac{(\overline{X}-\overline{Y})-(\mu_1-\mu_2)}{S_w\sqrt{\frac{1}{n_1}+\frac{1}{n_2}}} \sim t(n_1+n_2-2)$，其中$\displaystyle S_w^2 = {\frac{(n_1-1)S_1^2 + (n_2-1)S_2^2}{n_1+n_2-2}}$
+3. 当$\displaystyle \sigma_1^2 = \sigma_2^2 \triangleq \sigma^2$，有$\displaystyle \frac{(\overline{X}-\overline{Y})-(\mu_1-\mu_2)}{S_w\sqrt{\frac{1}{n_1}+\frac{1}{n_2}}} \sim t(n_1+n_2-2)$，其中$\displaystyle S_w = \sqrt{{\frac{(n_1-1)S_1^2 + (n_2-1)S_2^2}{n_1+n_2-2}}}$
 
 其他补充结论
 
@@ -870,3 +870,152 @@ ${\begin{cases} \displaystyle \mu = \overline{X} \\ \displaystyle \sigma^2 = \fr
 > 有来自正态总体$X\sim N(\mu,\sigma^2)$的正态总体X1~Xn，求P(X>1)的极大似然估计
 
 $P(X>1) = 1 - \Phi(\frac{1-\mu}{\sigma})$
+
+#### 评价准则
+
+##### 无偏性准则
+
+> 若$E(\hat\theta) = \theta$，则称$\hat\theta$为$\theta$的无偏估计
+>
+> 若$E(\hat\theta) \neq \theta$，则称$B(\hat\theta) = E(\hat\theta) - \theta$为$\hat\theta$的偏差
+>
+> 若$\displaystyle\lim_{n\rightarrow\infty} E(\hat\theta) = \theta$，则称$\hat\theta$为$\theta$的渐进无偏估计量
+
+**结论**
+
+1. $\overline X$和$S^2$分别为μ和σ^2^的无偏估计
+2. B~2~为σ^2^的渐进无偏估计
+
+**纠偏方法**
+
+$E(\hat\theta) = a\theta + b, \theta\in\Theta$，ab为常数，a不为0，则$\frac{1}{a}(\hat\theta-b)$为无偏估计
+
+##### 有效性准则
+
+> $\hat\theta_1, \hat\theta_2$是θ的两个**无偏估计**(Premise)，若$\forall \theta \in \Theta, Var(\hat\theta_1) \leqslant Var(\hat\theta_2)$，且$\exist \theta \in \Theta$使等号成立，则称$\hat\theta_1$比$\hat\theta_2$有效
+
+##### 均方误差准则
+
+> 均方误差$Mse(\hat\theta) \triangleq E[(\hat\theta-\theta)^2] = Var(\hat\theta) + [E(\hat\theta) - \theta]^2$
+> 
+> > 若$\hat\theta$是θ的无偏估计，则有$Mse(\hat\theta) = Var(\hat\theta)$
+> 
+> $\hat\theta_1, \hat\theta_2$是θ的两个无偏估计量，若$\forall \theta \in \Theta, Mse(\hat\theta_1) \leqslant Mse(\hat\theta_2)$，且$\exist \theta \in \Theta$使等号成立，则称$\hat\theta_1$优于$\hat\theta_2$
+
+**结论**
+
+1. B~2~由于S^2^
+2. 
+
+##### 相合性准则
+
+> 若对$\forall \theta \in \Theta$，当$n\rightarrow +\infty$，$\hat\theta \xrightarrow{P} \theta$，即$\forall \varepsilon > 0, \lim_{n\rightarrow+\infty} P(|\hat\theta-\theta| \geqslant \varepsilon) = 0$，则称$\hat\theta$为θ的相合估计量或一致估计量
+
+### 区间估计
+
+#### 置信区间
+
+> 若$\forall \theta \in \Theta, P(\hat\theta_L < \theta < \hat\theta_U) \geqslant 1 - \alpha$，则称$(\hat\theta_L,\hat\theta_U)$为θ的双侧置信区间
+> 
+> 置信度(置信水平)：1-α
+> 
+> 双侧置信下/上限：$\hat\theta_L$/$\hat\theta_U$
+> 
+> 精确度：置信区间平均长度$E(\hat\theta_U-\hat\theta_L)$
+> 
+> 误差限：$\frac{1}{2}E(\hat\theta_U-\hat\theta_L)$
+
+**含义**
+
+反复抽样n次确定了n个不同的双侧置信区间，其中有m次的包含了θ的真值，则$\frac{m}{n} \approx 1-\alpha$
+
+**单侧置信限**
+
+> 单侧置信下限：$\theta > \hat\theta_L$
+> 
+> 单侧置信上限：$\theta > \hat\theta_U$
+
+单双侧置信区间的关系：1-α = 1-α~L~-α~U~
+
+**Neman原则**：
+
+由于置信水平和精确度相互制约，因此要在置信度达到一定的前提下尽可能提高精确度
+
+#### 枢轴量法
+
+枢轴量与统计量的区别
+
+* 统计量<u>只是</u>样本的函数，其分布(随机变量分布)常常依赖于未知参数(但函数不能含有未知参数)
+* 枢轴量是样本(X~i~, Xbar, S^2^, ...)和未知参数(其他的参数都不行)的函数 **G(X~1~, X~2~, ..., X~n~; θ)**；其分布(随机变量分布)不依赖于任何未知参数(有时候μ, σ等会是未知的)，即分布是完全已知的
+
+**Ex**.
+
+$X\sim N(\mu, \sigma^2)$，μ，σ^2^均未知，取样本X~1~, ..., X~n~，则对于$\overline{X}, \frac{\sqrt{n}(\overline{X}-\mu)}{\sigma}, \frac{\sqrt{n}(\overline{X}-\mu)}{S}{}$
+
+0. 隐藏条件：n,S,Xbar 为已知量
+1. 仅有Xbar为统计量
+2. 若待估参数为μ，则仅有$\frac{\sqrt{n}(\overline{X}-\mu)}{S}{}$为枢轴量
+   1. $\overline{X}\sim N(\mu, \frac{\sigma^2}{n})$，分布依赖未知参数σ
+   2. $\frac{\sqrt{n}(\overline{X}-\mu)}{\sigma}{}$显然不成立
+
+#### 构造置信区间
+
+**Basic steps**
+
+1. 构造枢轴量 G(X~1~, X~2~, ..., X~n~; θ)
+2. 对给定置信度1-α，构造常数a\<b
+   1. 若X是连续型，使得$P_\theta(a<G(X_1,X_2,...,X_n;\theta)<b) = 1-\alpha$
+   2. 若X是离散型，$P_\theta(a<G(X_1,X_2,...,X_n;\theta)<b) \geqslant 1-\alpha$(“置信度达到一定的前提下”)，且尽可能接近1-α(“尽可能提高精确度”)
+3. 分离参数θ，转化不等式：$a<G(X_1,X_2,...,X_n;\theta)<b \Longrightarrow \hat\theta_L < \theta < \hat\theta_U$
+   1. 连续离散找置信上下限操作同上
+4. ==由于ab的不唯一性，上下街也是不唯一的，因此习惯上让ab满足$P_\theta(G(X_1,X_2,...,X_n;\theta) \leqslant a) = P_\theta(G(X_1,X_2,...,X_n;\theta) \leqslant b) = \frac{\alpha}{2}{}$==
+
+#### 正态总体的常见枢轴量
+
+**单个正态总体$N(\mu,\sigma^2)$**
+
+* μ的枢轴量：$\left\{ \begin{array}{ll} \frac{\sqrt{n}(\overline{X} - \mu)}{\sigma} \sim N(0,1) & (\sigma 已知) \\ \frac{\overline{X} - \mu}{S/\sqrt{n}} \sim t(n-1) & (\sigma^2 未知) \end{array} \right.$
+* σ^2^的枢轴量：$\begin{array}{ll}\frac{(n-1)S^2}{\sigma^2} \sim \chi^2(n-1) & (\mu未知) \end{array}{}$
+
+**两个正态总体$N(\mu_1,\sigma_1^2),N(\mu_2,\sigma_2^2)$**
+
+* μ~1~-μ~2~的枢轴量：$\left\{ \begin{array}{ll} \frac{(\overline{X}-\overline{Y})-(\mu_1-\mu_2)}{\sqrt{\frac{\sigma_1^2}{n_1}+\frac{\sigma_2^2}{n_2}}} \sim N(0,1)  & (\sigma_1,\sigma^2已知) \\ \frac{(\overline{X}-\overline{Y})-(\mu_1-\mu_2)}{S_w\sqrt{\frac{1}{n_1}+\frac{1}{n_2}}} \sim t(n_1+n_2-2),S_w = \sqrt{{\frac{(n_1-1)S_1^2 + (n_2-1)S_2^2}{n_1+n_2-2}}} & (\sigma_1^2=\sigma_2^2未知) \end{array}\right.$
+* σ~1~^2^/σ~2~^2^的枢轴量：$\begin{array}{ll}\frac{(n-1)S^2}{\sigma^2} \sim \chi^2(n-1) & (\mu_1,\mu_2未知)\end{array}{}$
+
+Ex. 
+
+[第7章 参数估计.pdf](file:///Users/ulysses/Documents/大二上/概统_152/课件pdf/第7章-参数估计.pdf) 的slide84
+
+Key: Find the mapping from Xbar to the given random variable. And from the bounds of the given random variable and the inverse **mapping** derive the bounds of Xbar.
+
+#### 接上：各种情况
+
+==课本P201==
+
+##### 单个正态总体
+
+> 成对数据：令$D_i=X_i-Y_i$，则$\displaystyle \overline{D} = \overline{X}-\overline{Y}, S_D^2 = \frac{1}{n-1}\sum_{i=1}^n (D_i-\overline{D})^2$
+
+1. 双侧就取α，单侧就取α/2
+2. μ的置信区间
+   1. σ^2^已知，容易，套公式：$\overline{X} \mp \frac{\sigma}{\sqrt{n}}z_{(\frac{\alpha}{2}or\alpha)}{}$
+   2. σ^2^未知，也容易，也套公式：$\overline{X} \mp \frac{S}{\sqrt{n}}t_{(\frac{\alpha}{2}or\alpha)}(n-1)$
+   3. 成对数据，用差值X~i~-Y~i~代换后套公式：
+3. σ^2^的置信区间
+   1. 只要求μ未知情况，同样也套公式：$(\frac{(n-1)S}{\chi_{\frac{\alpha}{2}}^2(n-1)},\frac{(n-1)S}{\chi_{1-\frac{\alpha}{2}}^2(n-1)})/\frac{(n-1)S}{\chi_{\alpha}^2(n-1)}/\frac{(n-1)S}{\chi_{1-\alpha}^2(n-1)}$
+4. 由于μ的枢轴量的分布均是关于y轴对称的(N,t)，所以才有$z_{1-\alpha} = -z_\alpha$
+
+##### 两个正态总体
+
+1. μ~1~-μ~2~的置信区间
+   1. σ~1~,σ~2~已知，套公式：$(\overline{X}-\overline{Y}) \mp z_{\frac{\alpha}{2}}\sqrt{\frac{\sigma_1^2}{n_1}+\frac{\sigma_2^2}{n_2}}$
+   2. σ~1~=σ~2~未知，套公式：$(\overline{X}-\overline{Y}) \mp t_{\frac{\alpha}{2}}(n_1+n_2-2)S_w\sqrt{\frac{1}{n_1}+\frac{1}{n_2}}$
+   3.  σ~1~≠σ~2~均未知，需分类讨论
+       1.  <u>样本量</u>n~1~与n~2~均足够大时(>50)，可以拿S近似替代σ，于是有：$\frac{(\overline{X}-\overline{Y})-(\mu_1-\mu_2)}{\sqrt{\frac{\sigma_1^2}{n_1}+\frac{\sigma_2^2}{n_2}}} \overset{近似}{\sim} N(0,1)$，解得置信区间为：$(\overline{X}-\overline{Y}) \mp z_{\frac{\alpha}{2}}\sqrt{\frac{S_1^2}{n_1}+\frac{S_2^2}{n_2}}$
+       2.  样本不够大，那只能用t分布拟合，且自由度$k \approx \min(n_1-1,n_2-1)$(精确值见书)，置信区间略
+2. σ~1~^2^/σ~2~^2^略
+
+#### 非正态总体
+
+1. 0-1分布
+2. F分布均值估计
