--- a/LCDF/数逻笔记.md
+++ b/LCDF/数逻笔记.md
@@ -356,8 +356,8 @@ D指的是Data
 主要区别在于[]中的只有输出还是输入和输出都有
 
 * **Moore**：输出**只**依赖<u>当前</u>
-
   * Outputs are a function ONLY of states
+  * 因此可以将输出与状态放在一个框里，(状态依然会随输入而改变，但是输出不会)
 * On circle with output included:
     * <u>[state/output]</u>
 
