--- a/Assembly/_汇编总结.md
+++ b/Assembly/_汇编总结.md
@@ -151,3 +151,19 @@ video_addr dw 0000h, 0B800h, 160, 0B800h
 
 ---
 
+一次性读一行的操作
+
+```assembly
+	dw 6h	; ValidBits + ActualBits, little-end rule so is 0006h = 06h,00h
+	mov ah,0ah
+	mov dx,offset str1-2
+	int 21h
+```
+
+---
+
+<u>小端规则时刻牢记</u>
+
+如上面那个是0006h而不是0600h
+
+---
