--- a/LCDF/数逻笔记.md
+++ b/LCDF/数逻笔记.md
@@ -279,7 +279,13 @@ input wire s1;
 reg [7:0] C;
 ```
 
+## Ch3
 
+#### 二补码
+
+(r-1)'s complement: (2^n^-1) - N
+
+r's complement: (2^n^-1) - N + 1 = 2^n^ - N
 
 ## Ch4 时序电路
 
@@ -559,11 +565,15 @@ Label form:
 
 <u>注意：若在时钟上升沿最后赋output，应是下一个状态的output；若是另写一个always赋值output，则因为是实时赋值，所以是当前状态的output</u>
 
-#### Appendix
+### Appendix
 
 * **t~s~与t~h~**
   * 建立(Setup)时间(t~s~)：时钟沿到来前输入数据D必须要稳定的时间
   * 保持(Hold)时间(t~h~)：时钟沿到来后输入数据D必须要稳定的时间
+* **时序电路正确工作所要求的最小时钟周期T为：T>t~Latch~+t~circuit~+t~s~**
+
+* 主从触发器与边缘触发器
+  * 主从式SR触发器在整个clk为H器件的输出都依赖与输入
 
 ### 其他触发器
 
@@ -646,25 +656,219 @@ graph LR
 | * Multiplication      | $R_0 \leftarrow R_1 \oplus R_2$ |                           |
 | / Division            | $R_0 \leftarrow \overline R_1$  |                           |
 
-### 对单个寄存器的微操作
+### 对单个寄存器的微操作、计数器初步
 
 **基于多路复用器的传输**
 
 `if(K1 == 1) then (R0 <-- R1) else if (K2 == 1) then (R0 <-- R2)`可分解为：$K_1:R0\leftarrow R1;\ \overline{K_1}K_2: R0 \leftarrow R2$
 
-**移位寄存器**
+**具有并行载入功能的双向通用移位寄存器**
 
 (见实验12
 
 * 可并行加载
 * 可双向移位
-* 可改变移位值
+* 可改变移位值(科学的说法是串行输入)
 
 **行波计数器(Ripple Counter)**
 
+不等于串行计数器
+
 * 实现
-  * 每当Q~i~从1到0跳转，Q~n(i)~从0到1跳转，引起Q~(i+1)~从0到1的翻转
+  * 除了第一个以外的触发器的C端口与上一个的输出端口Qn相连
+  * 每当Q~(i)~从1到0跳转，C~(i+1)~=Q~n(i)~从0到1跳转，引起Q~(i+1)~取反的翻转
 * 缺点
   * 异步电路，时延大，不稳定
 
 **同步计数器(Synchronous Counters)**
+
+所有触发器的C输入端口使用共用的时钟信号
+
+串行与并行的实现
+
+<img src="数逻笔记.assets/image-20191214201020194.png" alt="image-20191214201020194" style="zoom:50%;" />
+
+* 串行
+  * 与行波有点像
+    * 行波异步是C来自上一个的Qn，D直接接自己的Qn
+    * 串行同步是C接共用clk，D来自上一个寄存器的Q与自己的Q的异或(XOR保证了00->01->10->11->00->...)
+* 并行
+  * 相对串行的优点：1111到0000只需一个门的延时，串行要四个
+  * 串联多个并行同步计数器的方式 可以有效拓展位数并且时延相对较低
+
+**双向二进制计数器**
+
+**具有并行加载功能的二进制计数器**
+
+本质就是加上一个多路选择器
+
+| Load | Count | Action                |
+| ---- | ----- | --------------------- |
+| 0    | 0     | Hold Stored Value     |
+| 0    | 1     | Count Up Stored Value |
+| 1    | X     | Load D                |
+
+**拓展方式**
+
+==上一个的CO(Carry Output)连到下一个的Count==
+
+### modulo n计数器
+
+* Count is remainder of division by n; n may not be a power of 2
+* Count is arbitrary sequence of n states specifically designed state-by-state(不一定要从0到n-1，只要有n个states并且规定好即可)
+* Includes modulo 10 which is the BCD counter
+
+**BCD码计数器(模10计数器)**
+
+* 多了一个Y输出，当且仅当输出Q(t)=1001时，Y=1，使得D(t)=Q(t+1)=0000
+* 为了确保不会进入Ah\~Fh，可以加上从那边回到0\~9的状态变化
+
+**任意计数序列**
+
+无用状态的处理
+
+例如对于6个状态的处理器，让3和7为无关条件则可以这样处理：
+
+```mermaid
+graph LR
+
+000 --> 001
+001 --> 010
+010 --> 100
+100 --> 101
+101 --> 110
+110 --> 000
+011 --> 110
+111 --> 010
+RST --> 000
+```
+
+The following **techniques** use an n-bit binary counter with asynchronous or synchronous clear and/or parallel load:
+
+1. Detect a terminal count of N in a Modulo-N count sequence to asynchronously Clear the count to 0 or asynchronously Load in value 0 (These lead to counts which are present for only a very short time and can fail to work for some timing conditions!)(检测出终止状态N然后(在不到一个clk的时间)用异步清零或者加载零)
+2. Detect a terminal count of N - 1 in a Modulo-N count sequence to Clear the count synchronously to 0(检测到N-1然后同步清零)
+3. Detect a terminal count of N - 1 in a Modulo-N count sequence to synchronously Load in value 0(检测到N-1然后同步加载零)
+4. Detect a terminal count and use Load to preset a count of the terminal count value minus (N - 1)(终止状态减掉N-1)
+
+**举例**：
+
+1. 对于一个模三计数器，用第一种方法，则状态是：$0\xrightarrow{clk}1\xrightarrow{clk}2\xrightarrow{clk}3\xrightarrow{t \ll clk}0\xrightarrow{clk}...$ 强烈建议：**DON’T DO THIS!** 由于是异步清零，可能N存在的时间不够长，导致清零只清了一半
+2. 对于一个模7计数器，用第三种方法，则可以让`Load=Q2*Q1` (Q2\*Q1\*Q0来不及出现所以不用写成minimun)，然后
+
+### 寄存器单元(reg cell)设计
+
+将1位的迭代组合电路和一个触发器连接起来就构成了一个具有两个状态的时序电路，称之为寄存器单元；将一个RegCell复制n份组合在一起，就可以构成一个n位寄存器
+
+**优化**
+
+举例1：
+
+对于以下寄存器操作：
+* AND: $A\leftarrow A \wedge B$
+* EXOR:$A\leftarrow A \oplus B$
+* OR:  $A\leftarrow A \vee B$
+
+获得表达式Di = A(t+1)i = AND\*AiBi + EXOR\*(Ai\~Bi + \~AiBi) + OR*(Ai+Bi)
+
+假设三个使能中仅有一个能为1，则
+
+Di = A(t+1)i = AND\*AiBi + EXOR\*(Ai\~Bi + \~AiBi) + OR*(Ai+Bi) + \~AND\~EXOR\~OR*Ai
+
+化简(应该还是得用卡诺图比较好)得Di=(AND+OR+\~AND\~EXOR\~OR)\*AiBi + (EXOR+OR+\~AND\~EXOR\~OR)\*Ai\~Bi + (EXOR+OR)\*\~AiBi = (AND+OR+\~EXOR)\*AiBi + (EXOR+OR+\~AND)\*Ai\~Bi + (EXOR+OR)\*\~AiBi
+
+<u>从关于使能的函数转化为关于寄存器运算结果的函数</u>
+
+Ex2.
+
+Register A (m-bits) Specification:
+* Data input: B
+* Control inputs (CX, CY)
+* Control input combinations (0,0), (0,1) (1,0)
+* Register transfers:
+  * CX: A ← B v A
+  * CY :A ← B + A
+* Hold state: (0,0)
+
+Di's K_Map:
+
+| CXCY\AiBi | 00   | 01   | 11   | 10   |
+| --------- | ---- | ---- | ---- | ---- |
+| 00        | 0    | 0    | 1    | 1    |
+| 01        | 0    | 1    | 0    | 1    |
+| 11        | x    | x    | x    | x    |
+| 10        | 0    | 1    | 1    | 1    |
+
+Di = CX\*Bi + CY\*\~Ai\*Bi + Ai\*\~Bi + \~CY\*Ai = CX\*Bi + Ai \^ (CY \* Bi)
+
+**Ex**.
+
+Ai+Bi的微操作是((Ai\^Bi)\^Ci); C~i+1~ = (Ai\^Bi)*Ci + AiBi
+
+### 基于muxer和bus的多寄存器传输(Multiple registers transfers)
+
+#### 两种实现方式：
+
+以三位双路选择为例
+
+* ~~Dedicated MUX-Based Transfers(专用多路复用器)~~
+
+ ```mermaid
+graph LR
+
+MUX0[MUX2t1_1_0]
+MUX1[MUX2t1_1_1]
+MUX2[MUX2t1_1_2]
+
+BUS0 --BUS0_0--> MUX0 --BUS'_0--> Reg0
+BUS0 --BUS0_1--> MUX1 --BUS'_1--> Reg1
+BUS0 --BUS0_2--> MUX2 --BUS'_2--> Reg2
+
+BUS1 --BUS1_0--> MUX0
+BUS1 --BUS1_1--> MUX1
+BUS1 --BUS1_2--> MUX2
+ ```
+
+* Multiplexer Bus(单总线)
+
+```mermaid
+graph LR
+
+MUX[MUX2t1_3]
+
+BUS0 --> MUX
+BUS0 --> MUX
+BUS0 --> MUX
+BUS1 --> MUX
+BUS1 --> MUX
+BUS1 --> MUX
+MUX --BUS'_0--> Reg0
+MUX --BUS'_1--> Reg1
+MUX --BUS'_2--> Reg2
+```
+
+#### 三态总线
+
+Hi-Z输出性质
+* Hi-Z输出可以互联，但不能同一时刻输出高低的互联
+* 既可作为输出又可作为输入
+
+三态缓冲器：单数据输入的基本门
+
+EN=0输出Hi-Z，EN为1正常
+
+<img src="数逻笔记.assets/image-20191215104333360.png" alt="image-20191215104333360" style="zoom:25%;" />
+
+(a)：三态缓冲器开启(EN=1)，作为输出；三态缓冲器关闭(EN=0)，作为输入
+
+### 串行传输及其微操作
+
+与并行的不同：由于只有一个串行输入端和串行输出端，因此寄存器中的值不能任意改变
+
+优势：成本较低
+劣势：时间慢
+
+**串行加法器**
+
+将两个n位待加数保存在两个n位移位寄存器中，用一位全加器按位加法运算，全加器的输出保存在一个D触发器中(连到D端口)，然后D触发器的输出作为下一位的全加器加法运算的进位输入
+
+<img src="数逻笔记.assets/image-20191215115541386.png" alt="image-20191215115541386" style="zoom:25%;" />
