--- a/EngSS/19-12-16.md
+++ b/EngSS/19-12-16.md
@@ -40,3 +40,45 @@ social dum 社会渣滓
 
 
 
+tony：tone的形容词
+
+拿腔捏调
+
+
+
+> All of a sudden I slid right down her voice into her living room
+>
+> 突然，我循着她的声音溜进她的起居室 (yysy我觉得老师翻译得挺烂的)
+
+==翻译遵循原文，不加个人解读==
+
+想到别人爹妈，接连想起自己的爹妈，作对比
+
+喝饮料的杯也要提一下，上面有cartoon，说明是低档酒杯
+
+> His repeating this struck me as funny
+>
+> 他的重复让我感到好笑
+
+
+
+super-intendent 宿管
+
+
+
+> remember her place
+
+place指1家庭地位2实际位置
+
+
+
+crummy  劣质的;低劣的;糟糕的；
+
+
+
+blue eye：blue stands for nobility
+
+
+
+unsuspected hero
+
