--- a/GP/普物2笔记.md
+++ b/GP/普物2笔记.md
@@ -151,7 +151,7 @@ $r = \left \{ \begin{array}{cc} \sqrt{(k-\frac12)R\lambda},(k = 1,2,3,...) & \Lo
 
 ##### 迈克尔孙干涉
 
-### Ch36-2 衍射
+### Ch36-2 衍射 Diffraction
 
 **两类衍射**
 
@@ -224,4 +224,41 @@ $\theta \approx \sin \theta = 1.22\frac{\lambda}{D}{}$，其中D(2R)为孔的直
 
 定义**分辨率**：$R = \frac{1}{\theta_{min}} = \frac{D}{1.22\lambda}{}$
 
-#### 光栅衍射
+### 36-3 光栅衍射 Gratings and Spectra
+
+* $\Delta\varphi = \frac{2\pi}{\lambda}d\sin\theta$
+* 主极大(Maxima、Order、Diffraction)，也叫谱线(spectra)
+  * 振幅矢量叠加在一条直线
+  * $\Delta\varphi = \pm k(2\pi), k = 0,1,2,...$
+  * 不超过$\frac{d}{\lambda}{}$
+* 暗纹，极小(Minima)
+  * 振幅矢量叠加形成闭合多边形
+  * $N\Delta\varphi = \pm k'(2\pi), k' = 1,2,...$
+  * 注意，k'!=kN，但第k级主极大相邻两个主极小是kN-1与kN+1
+  * N-1个
+* 次极大
+  * 介于两个极小之间，由于振幅矢量叠加既不在一条直线(主极大)，又不形成闭合多边形(极小)造成
+  * N-2个
+
+
+**布拉格方程**
+
+> 布拉格方程：对于X射线衍射，当光程差等于波长的整数倍时，晶面的散射线将加强，此时满足的条件为2dsinθ=nλ，其中，d为晶面间距，θ为入射线，反射线与反射晶面之间的夹角，λ为波长，n为反射级数，布拉格方程是X射线在晶体产生衍射时的必要条件而非充分条件。有些情况下晶体虽然满足布拉格方程，但不一定出现衍射，即所谓系统消光。
+
+注意：由此可知若入射光也存在倾角，则总光程差应连入射部分的光程差一起考虑
+
+**缺级**
+
+第k1级单缝衍射暗纹与第k2级光栅衍射主极大重合
+
+$\begin{cases} a\sin\theta = k_1\lambda \\ d\sin\theta = k_2\lambda \end{cases}{} \Longrightarrow k_2 = \pm\frac{d}{a}k_1$时发生缺级
+
+*为什么不是单缝衍射明纹与光栅衍射主极小呢？* 因为主极小有多个，而且那也不叫缺级，缺级是相对亮的主极大而言的
+
+**分辨本领**
+
+分辨本领R：恰能分辨的两道谱线的平均波长λ与两道谱线的波长差Δλ之比
+
+由于第k级主极大左右分别是第kN-1与kN+1级亮纹，使波长为λ+Δλ的第k级主极大恰好与波长为λ的第kN+1级暗纹(极小)重合(两个颠倒用kN-1也是可以的)，则有：
+
+$\begin{cases} d\sin\theta = k(\lambda+\Delta\lambda) \\ Nd\sin\theta = (kN+1)\lambda \end{cases} \Longrightarrow R = kN$
