--- a/GP/普物2笔记.md
+++ b/GP/普物2笔记.md
@@ -101,7 +101,7 @@ $I = 4I_0\cos(\frac{\Delta\varphi}{2})$
 
 从==光疏介质打到光密介质==的光在反射时会损失半波
 
-##### **光程**
+##### 光程
 
 >  光在介质中传播了几何路程r相当于在真空中传播了光程L
 >
@@ -262,3 +262,38 @@ $\begin{cases} a\sin\theta = k_1\lambda \\ d\sin\theta = k_2\lambda \end{cases}{
 由于第k级主极大左右分别是第kN-1与kN+1级亮纹，使波长为λ+Δλ的第k级主极大恰好与波长为λ的第kN+1级暗纹(极小)重合(两个颠倒用kN-1也是可以的)，则有：
 
 $\begin{cases} d\sin\theta = k(\lambda+\Delta\lambda) \\ Nd\sin\theta = (kN+1)\lambda \end{cases} \Longrightarrow R = kN$
+
+### Ch36-3 Polarization
+
+* 起偏：自然光 --> 偏振光
+* 检偏：检验
+
+**Law of Malus**
+
+* E~tranmitted~ = E~incident~cosθ
+* I~transmitted~ = I~incident~ cos^2^θ
+* For nature light: I=I~0~/2(积分)
+
+**旋光**
+
+偏振角发生变化但是强度不变
+
+**Brewster’s Law**
+
+当反射光与折射光垂直时两光均为偏振光
+
+$\begin{cases} i+r=90^\circ \\ n_1\sin i = n_2\sin r \end{cases} \Longrightarrow \tan i = \frac{n_2}{n_1} = n_{21}\Longrightarrow i = \arctan(n_{21})$，这个i称为布儒斯特角
+
+用这个原理，把很多块玻璃砖叠在一起，然后以i~0~入射，就可以近似产生偏振光
+
+另外还有布儒斯特窗使镜片的法线与光轴成布儒斯特角
+
+#### 双折射
+
+Premise：晶体具有各向异性(Optically anisotropic)
+
+* 寻常光(Ordinary)：在晶体表面遵循折射定律，即$n_1\sin i = n_2\sin r$
+* 非寻常光(Extraordinary)：
+
+* 光轴
+* 
