--- a/GP/普物2笔记.md
+++ b/GP/普物2笔记.md
@@ -295,5 +295,19 @@ Premise：晶体具有各向异性(Optically anisotropic)
 * 寻常光(Ordinary)：在晶体表面遵循折射定律，即$n_1\sin i = n_2\sin r$
 * 非寻常光(Extraordinary)：
 
-* 光轴
-* 
+* 光轴：vo与ve相等的方向
+* 主折射率：ne=c/ve
+
+* positive crystal
+  * vo > ve
+  * no < ne
+  * e-ray的波阵面内切
+* negative crystal
+  * vo < ve
+  * no > ne
+  * e-ray的波阵面外切
+
+四种情况见PPT36-4 Slide 13 / 大雾P98
+
+特别注意第三种，虽然e-ray与o-ray未分开，但波阵面是不重合的，因此仍有双折射现象存在
+
