--- a/Assembly/_汇编总结.md
+++ b/Assembly/_汇编总结.md
@@ -62,6 +62,8 @@ ah = 9h：输出首地址存在DX的'$'结尾的字符串
 
 ah = 2h：输出DL中单个字符
 
+ah=0ah：返回后第二个字节是实际读取字符数，不包括CR，但是第三位开始读进来的字符包括最后的CR(没有LF)
+
 ---
 
 **add(mov, sub同)**
