--- a/GP/普物2笔记.md
+++ b/GP/普物2笔记.md
@@ -265,6 +265,9 @@ $\begin{cases} d\sin\theta = k(\lambda+\Delta\lambda) \\ Nd\sin\theta = (kN+1)\l
 
 ### Ch36-3 Polarization
 
+* 线偏振光：只在一个方向上振动
+* 椭圆偏振光
+
 * 起偏：自然光 --> 偏振光
 * 检偏：检验
 
@@ -311,3 +314,18 @@ Premise：晶体具有各向异性(Optically anisotropic)
 
 特别注意第三种，虽然e-ray与o-ray未分开，但波阵面是不重合的，因此仍有双折射现象存在
 
+椭圆偏振：频率相同，相位差恒定的两个相互垂直的简谐振动；实验上可以经过波片之后o光与e光产生的相位差造成
+
+1/4波片、1/2波片
+
+**偏振光的干涉**
+
+两偏振片垂直
+* $A_{e2} = A_{e1}\cos\beta = A\cos\alpha\cos\beta$
+* $A_{o2} = A_{o1}\cos\alpha = A\cos\beta\cos\alpha$
+* $\Delta\varphi_\bot = \frac{2\pi}{\lambda}|n_e-n_o| d + \pi$
+
+两偏振片平行
+* $A_{e2} = A_{e1}\cos\alpha = A\cos^2\alpha$
+* $A_{o2} = A_{o1}\sin\alpha = A\sin^2\alpha$
+* $\Delta\varphi_\Vert = \frac{2\pi}{\lambda}|n_e-n_o| d$
