--- a/LCDF/数逻笔记.md
+++ b/LCDF/数逻笔记.md
@@ -289,29 +289,46 @@ r's complement: (2^n^-1) - N + 1 = 2^n^ - N
 
 ## Ch4 时序电路
 
+### 基本概念
+
+同步电路与异步电路
+
+* Depends on the times at which:
+  * storage elements observe their inputs, and
+  * storage elements change their state 
+* Synchronous
+  * 行为根据离散的时间点、其信号线(clk pulse)上的相关信息来进行定义
+  * Behavior defined from knowledge of its signals at discrete instances of time
+  * Storage elements observe inputs and can change state only in relation to a timing signal (clock pulses from a clock)
+* Asynchronous
+  * 行为依赖于某一时刻的输入信号及输入信号在连续时间内变化的顺序
+  * Behavior defined from knowledge of inputs an any instant of time and the order in continuous time in which inputs change
+  * If clock just regarded as another input, all circuits are asynchronous!
+  * Nevertheless, the synchronous abstraction makes complex designs tractable!
+
 ### 基础模块
 
 #### SR锁存器（NOR）
 
 | 状态           | S    | R    | Q    | Qn   |
-| -------------- | ---- | ---- | ---- | ---- |
+| ------------- | ---- | ---- | ---- | ---- |
 | 保持           | 0    | 0    | Q    | Qn   |
 | 置位           | 1    | 0    | 1    | 0    |
 | 置位           | 0    | 0    | 1    | 0    |
 | 复位           | 0    | 1    | 0    | 1    |
 | 复位           | 0    | 0    | 0    | 1    |
-| 未定义（同时） | 1    | 1    | x    | x    |
+| 未定义（同时）   | 1    | 1    | x    | x    |
 
 #### SnRn锁存器（NAND）
 
 | 状态           | Sn   | Rn   | Q    | Qn   |
-| -------------- | ---- | ---- | ---- | ---- |
+| ------------- | ---- | ---- | ---- | ---- |
 | 保持           | 1    | 1    | Q    | Qn   |
 | 置位           | 0    | 1    | 1    | 0    |
 | 置位           | 1    | 1    | 1    | 0    |
 | 复位           | 1    | 0    | 0    | 1    |
 | 复位           | 1    | 1    | 0    | 1    |
-| 未定义（同时） | 0    | 0    | x    | x    |
+| 未定义（同时）   | 0    | 0    | x    | x    |
 
 #### D锁存器
 
@@ -354,6 +371,19 @@ D指的是Data
 * **负边(下降)沿D触发器**
   * DLatch + SRLatch + 1 × NOR
   * symbol：C处有尖角，外侧有小圆
+
+#### 主从与边沿
+
+* master-slave
+  * 步骤
+    1. 在cp的高电平或低电平期间，输入信号先决定主触发器状态；
+    2. cp下降沿或上升沿到来，主触发器状态原样转移给从触发器，表现为整个触发器的状态。转移过去的状态取决于cp的高电平或低电平期间所有的输入。
+* edge-triggered
+  * 触发器状态仅仅取决于cp边沿到来那一瞬间的输入。
+
+二者的symbol不一样，见[Chap04_1.pdf](file:///Users/ulysses/Documents/%E5%A4%A7%E4%BA%8C%E4%B8%8A/%E6%95%B0%E9%80%BB/%E7%90%86%E8%AE%BA%20%E8%AF%BE%E4%BB%B6/Chap04_1.pdf)的Slide41
+
+*所以Trigger和Flip-Flop还是不是一个东西？*<u>应该都可以</u>
 
 ### 时序电路设计
 
