--- a/概统笔记.md
+++ b/概统笔记.md
@@ -280,7 +280,7 @@ $$
 $$
 \begin{cases}
 F_{max}(t) = \prod_{i=1}^n F_i(t)\\
-F_{min}(t) = 1 - \prod_{i=1}^n [1-F(t)]
+F_{min}(t) = 1 - \prod_{i=1}^n [1-F_i(t)]
 \end{cases}
 $$
 
